# electronic_store_HW_Python_SkyPro

./: .gitignore  README.md  main.py  product.py  pyproject.toml
electronics_store/: items.csv  keyboard.py  main.py  mixin_change_language.py  phone.py  product.py
tests/: product_test.py  test_keyboard.py  test_telephones.py
