[tool.poetry]
name = "electronics-store"
version = "0.1.0"
description = ""
authors = ["Tsvetkova Nina <tsvnishka@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_store"}]

[tool.poetry.dependencies]
python = "3.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
